[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
landlock = "0.4.0"
libc = "0.2.155"
once_cell = "1.19.0"
rlimit = "0.10.1"
seccompiler = "0.4.0"
serde = { version = "1.0.204", optional = true }
serde_with = { version = "3.9.0", default-features = false, features = ["macros"], optional = true }
tempfile = "3.10.1"
thiserror = "1.0.63"

[features]
serde = ["dep:serde", "dep:serde_with"]

[profile.release]
lto = "thin"
